issue solved in ui kits all pages

--- a/assets/postcss/components/_collapse.css
+++ b/assets/postcss/components/_collapse.css
@@ -23,7 +23,7 @@
   .accordionWrapper {
     &.flush {
       .accordionItemHeading {
-        @apply bg-transparent text-title rounded-none font-bold;
+        @apply bg-transparent text-title rounded-none font-bold hover:bg-light;
       }
 
       .accordionItemContent,
