--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -56,7 +56,7 @@ html[class="dark"] {
   --black: #fff;
   --light: #44588f;
   --dark: #d8ecff;
-  --title: #ffffff
+  --title: #fff;
 }
 
 /* Unique Skin */
