--- a/html/template/progress.html
+++ b/html/template/progress.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="fixed top-0 z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -380,7 +380,7 @@
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
-                        <div><img class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
+                        <div><img class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
                         <div class="md:hidden">
                           <h4 class="text-xs font-bold dark:text-white"> Helen Walter</h4><span class="flex items-center gap-1 font-semibold text-3xs text-content">Admin
                             <svg class="w-[6px] h-[4px]  dark:stroke-white"> 
@@ -1078,19 +1078,19 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col gap-2">
                         <div class="progress-bar dark:bg-border-dark">
-                          <div class="bg-primary text-[0.5625rem] font-bold text-center" style="width:0%">0% </div>
+                          <div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%">0% </div>
                         </div>
                         <div class="progress-bar dark:bg-border-dark">
-                          <div class="bg-secondary text-[0.5625rem] font-bold text-center text-white" style="width:10%">10%</div>
+                          <div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center text-white" style="width:10%">10%</div>
                         </div>
                         <div class="progress-bar dark:bg-border-dark">
-                          <div class="bg-info text-[0.5625rem] font-bold text-center text-white" style="width:40%">40%</div>
+                          <div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center text-white" style="width:40%">40%</div>
                         </div>
                         <div class="progress-bar dark:bg-border-dark">
-                          <div class="bg-success text-[0.5625rem] font-bold text-center" style="width:70%">70%</div>
+                          <div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%">70%</div>
                         </div>
                         <div class="progress-bar dark:bg-border-dark">
-                          <div class="bg-warning text-[0.5625rem] font-bold text-center text-white" style="width:100%">100%</div>
+                          <div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center text-white" style="width:100%">100%</div>
                         </div>
                       </div>
                     </div>
@@ -1098,19 +1098,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col gap-2"&gt;
    &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt;&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt;&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;&lt;/div&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1237,7 +1237,7 @@
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2"></code>&lt;div class="flex flex-col gap-3"&gt;
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col gap-3"&gt;
    &lt;div class="flex flex-col gap-1"&gt;
        &lt;div class="text-xs font-medium text-content3"&gt;Primary&lt;/div&gt;
        &lt;div class="progress-bar dark:bg-border-dark"&gt;
@@ -1262,7 +1262,7 @@
            &lt;div class="bg-success" style="width:80%"&gt;&lt;/div&gt;
        &lt;/div&gt;
    &lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1304,6 +1304,13 @@
                             <div class="bg-warning" style="width:22%"></div>
                           </div>
                         </div>
+                        <div class="progress-bar progress-lg multi-bar dark:bg-border-dark">
+                          <div class="flex">
+                            <div class="bg-info" style="width:45%"></div>
+                            <div class="bg-warning !rounded-none" style="width:22%"></div>
+                            <div class="bg-secondary" style="width:15%"></div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
@@ -1327,6 +1334,13 @@
        &lt;div class="flex"&gt;
           &lt;div class="bg-light rounded-l-2xl" style="width:45%"&gt;&lt;/div&gt;
           &lt;div class="bg-warning" style="width:22%"&gt;&lt;/div&gt;
+       &lt;/div&gt;
+   &lt;/div&gt;
+   &lt;div class="progress-bar progress-lg multi-bar dark:bg-border-dark"&gt;
+       &lt;div class="flex"&gt;
+          &lt;div class="bg-light" style="width:45%"&gt;&lt;/div&gt;
+          &lt;div class="bg-warning !rounded-none" style="width:22%"&gt;&lt;/div&gt;
+          &lt;div class="bg-danger" style="width:15%"&gt;&lt;/div&gt;
        &lt;/div&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
