--- a/assets/pug/layout/header/profile-box.pug
+++ b/assets/pug/layout/header/profile-box.pug
@@ -3,7 +3,7 @@
 div.dropdown 
    div.flex.items-center(class="gap-[10px] cursor-pointer") 
       div
-         img(class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar")
+         img(class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar")
       div(class="md:hidden")
          h4(class="text-xs font-bold dark:text-white")  Helen Walter
          span.flex.items-center.gap-1(class="font-semibold text-3xs text-content")
