--- a/assets/pug/pages/template/divider.pug
+++ b/assets/pug/pages/template/divider.pug
@@ -53,18 +53,18 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-col.w-full.gap-2.items-center
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") Web Designer
                         div.divider OR   
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") UI/UX Designer
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col w-full gap-2"&gt;
-                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; Web Designer &lt;/div&gt; 
                           |    &lt;div class="divider"&gt; OR &lt;/div&gt; 
-                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; UI/UX Designer &lt;/div&gt; 
                           |&lt;/div&gt;
 
             div.col-span-6(class="md:col-span-12")
@@ -82,18 +82,18 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-col.w-full.gap-2.items-center
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") Web Designer
                         div.divider(class="before:w-full after:w-0")   
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") Web Developer
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col w-full gap-2"&gt;
-                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; Web Designer &lt;/div&gt; 
                           |    &lt;div class="divider before:w-full after:w-0"&gt; OR &lt;/div&gt; 
-                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; Web Developer &lt;/div&gt; 
                           |&lt;/div&gt;
 
             div.col-span-6(class="md:col-span-12")
@@ -113,18 +113,18 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.w-full.gap-2
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") PhotoShop
                         div.divider.horizontal.w-auto OR   
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2") Figma
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex w-full gap-2"&gt;
-                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; PhotoShop &lt;/div&gt; 
                           |    &lt;div class="w-auto divider horizontal"&gt; OR &lt;/div&gt; 
-                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; Figma &lt;/div&gt; 
                           |&lt;/div&gt;
             div.col-span-6(class="md:col-span-12")
               div.card.tabs
@@ -141,21 +141,21 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.w-full.gap-2(class="lg:flex-col md:items-center")
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2") Ecommerce Template
                         div.divider(class="min-lg:w-auto min-lg:horizontal lg:w-full md:w-[40%] sm:w-full") OR  
-                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2") content
+                        div.grid.h-20.card.rounded-box.place-items-center(class="w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2") Admin Template
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex w-full gap-2 lg:flex-col"&gt;
-                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; Ecommerce Template&lt;/div&gt; 
                           |    &lt;div class="divider min-lg:w-auto min-lg:horizontal lg:w-full md:w-[40%] sm:w-full"&gt; OR &lt;/div&gt; 
-                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
+                          |    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; Admin Template &lt;/div&gt; 
                           |&lt;/div&gt;
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-include ../../components/customizer
+      include ../../components/customizer
 
-include ../../layout/footer-files
+  include ../../layout/footer-files
