--- a/html/template/tooltip.html
+++ b/html/template/tooltip.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="fixed top-0 z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -380,7 +380,7 @@
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
-                        <div><img class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
+                        <div><img class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
                         <div class="md:hidden">
                           <h4 class="text-xs font-bold dark:text-white"> Helen Walter</h4><span class="flex items-center gap-1 font-semibold text-3xs text-content">Admin
                             <svg class="w-[6px] h-[4px]  dark:stroke-white"> 
@@ -1021,7 +1021,7 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="flex items-center flex-wrap gap-2">
-                          <button class="btn btn-primary text-white" data-tw-tooltip="Always top">Default Top</button>
+                          <button class="btn btn-primary text-white" data-tw-tooltip="Surprise!!! I appreciate your hovering...">Please hover over me, it's magic... </button>
                         </div>
                       </div>
                     </div>
@@ -1029,7 +1029,7 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
   &lt;div class="flex flex-wrap items-center gap-2"&gt;
-      &lt;button class="text-white btn btn-primary" data-tw-tooltip="Always top"&gt;Default Top&lt;/button&gt;
+      &lt;button class="text-white btn btn-primary" data-tw-tooltip="Surprise!!! I appreciate your hovering..."&gt;Please hover over me, it's magic... &lt;/button&gt;
   &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1054,7 +1054,7 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="flex items-center flex-wrap gap-2">
-                          <button class="btn bg-primary-light hover:bg-primary hover:text-white focus:bg-primary focus:border-primary focus:text-white" data-tw-tooltip="Focused">Focused</button>
+                          <button class="btn bg-warning-light hover:bg-warning hover:text-white focus:bg-warning focus:border-warning focus:text-white" data-tw-tooltip="Focused">Focused</button>
                         </div>
                       </div>
                     </div>
@@ -1062,7 +1062,7 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll "><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
   &lt;div class="flex flex-wrap items-center gap-2"&gt;
-      &lt;button class="btn bg-primary-light" data-tw-tooltip="Focused" class="hover:bg-primary hover:text-white focus:bg-primary focus:border-primary focus:text-white&gt;Focused&lt;/button&gt;
+      &lt;button class="btn bg-warning-light" data-tw-tooltip="Focused" class="hover:bg-warning hover:text-white focus:bg-warning focus:border-warning focus:text-white&gt;Focused&lt;/button&gt;
   &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1126,10 +1126,10 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="flex items-center flex-wrap gap-2">
-                          <button class="btn border border-primary" data-tw-tooltip="Top tooltip" data-flow="top">Top Tooltip</button>
-                          <button class="btn border border-primary" data-tw-tooltip="Left tooltip" data-flow="left">Left Tooltip</button>
-                          <button class="btn border border-primary" data-tw-tooltip="Right tooltip" data-flow="right">Right Tooltip</button>
-                          <button class="btn border border-primary" data-tw-tooltip="Bottom tooltip" data-flow="bottom">Bottom Tooltip</button>
+                          <button class="btn btn-outline btn-secondary dark:bg-sidebar-dark2" data-tw-tooltip="Top tooltip" data-flow="top">Top Tooltip</button>
+                          <button class="btn btn-outline btn-warning dark:bg-sidebar-dark2" data-tw-tooltip="Left tooltip" data-flow="left">Left Tooltip</button>
+                          <button class="btn btn-outline btn-info dark:bg-sidebar-dark2" data-tw-tooltip="Right tooltip" data-flow="right">Right Tooltip</button>
+                          <button class="btn btn-outline btn-success dark:bg-sidebar-dark2" data-tw-tooltip="Bottom tooltip" data-flow="bottom">Bottom Tooltip</button>
                         </div>
                       </div>
                     </div>
@@ -1137,10 +1137,10 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
   &lt;div class="flex flex-wrap items-center gap-2"&gt;
-      &lt;button class="border btn border-primary" data-tw-tooltip="Top tooltip" data-flow="top"&gt;Top Tooltip&lt;/button&gt;
-      &lt;button class="border btn border-primary" data-tw-tooltip="Left tooltip" data-flow="left"&gt;Left Tooltip&lt;/button&gt;
-      &lt;button class="border btn border-primary" data-tw-tooltip="Right tooltip" data-flow="right"&gt;Right Tooltip&lt;/button&gt;
-      &lt;button class="border btn border-primary" data-tw-tooltip="Bottom tooltip" data-flow="bottom"&gt;Bottom Tooltip&lt;/button&gt;
+      &lt;button class="btn btn-outline btn-secondary" data-tw-tooltip="Top tooltip" data-flow="top" class="dark:bg-sidebar-dark2"&gt;Top Tooltip&lt;/button&gt;
+      &lt;button class="btn btn-outline btn-warning" data-tw-tooltip="Left tooltip" data-flow="left" class="dark:bg-sidebar-dark2"&gt;Left Tooltip&lt;/button&gt;
+      &lt;button class="btn btn-outline btn-info" data-tw-tooltip="Right tooltip" data-flow="right" class="dark:bg-sidebar-dark2"&gt;Right Tooltip&lt;/button&gt;
+      &lt;button class="btn btn-outline btn-success" data-tw-tooltip="Bottom tooltip" data-flow="bottom" class="dark:bg-sidebar-dark2"&gt;Bottom Tooltip&lt;/button&gt;
   &lt;/div&gt; 
 &lt;/div&gt;; </code></pre>
                     </div>
